<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <android.support.v4.widget.NestedScrollView android:id="@+id/detail_additional_pane"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical"
            >

            <!-- Loading data display -->
            <RelativeLayout
                android:id="@+id/layout_display_info"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content"
                >

                <ProgressBar
                    android:id="@+id/progressbar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="8dp"
                    />

                <TextView
                    android:id="@+id/tvError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    tools:text="@string/error_no_results"
                    />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:id="@+id/tvPostBody"
                        android:textSize="16sp"
                        android:lineSpacingExtra="3dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:textColor="@android:color/black"
                        android:text="@string/related_albums_text"
                        android:padding="12dp"
                        android:textAppearance="?android:textAppearanceMediumInverse"
                        />

                    <android.support.v7.widget.RecyclerView
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/rvRelatedPosts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="vertical"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:textColor="@android:color/black"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:text="@string/favorite_albums_text"
                        android:paddingTop="24dp"
                        android:textAppearance="?android:textAppearanceMediumInverse"/>

                    <android.support.v7.widget.RecyclerView
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/rvAlbums"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:scrollbars="vertical"
                        />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>
